--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             SELF STUDY ZONE
         </div>
         <nav>
-            <a href="website.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="#about">GALLERY</a>
             <a href="register.html">REGISTER</a>
             <a href="#facility">FACILITIES</a>
@@ -85,4 +85,5 @@
   
     
 </body>
+
 </html>
